# self-improving-efms.github.io

./: .env  README.md  dev_pytorch.ipynb  policy_rl.pth  policy_sft.pth  pyproject.toml  requirements.txt  steps_net_rl.pth  steps_net_sft.pth  train_rl.py  train_sft.py
data/: dataset.py
data/env/: point_mass.py
models/: policy_net.py  steps_net.py
utils/: reinforce.py
