[project]
name = "self-improving-efms-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py==2.4.0",
    "asttokens==3.0.1",
    "astunparse==1.6.3",
    "attrs==25.4.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "dm-env==1.6",
    "dm-haiku==0.0.16",
    "dm-tree==0.1.9",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "filelock==3.20.0",
    "flatbuffers==25.12.19",
    "fonttools==4.62.0",
    "fsspec==2025.12.0",
    "gast==0.7.0",
    "google-pasta==0.2.0",
    "grpcio==1.78.0",
    "h5py==3.14.0",
    "idna==3.11",
    "imageio==2.37.3",
    "imageio-ffmpeg==0.6.0",
    "ipykernel==7.2.0",
    "ipython==8.38.0",
    "jax==0.6.2",
    "jaxlib==0.6.2",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmp==0.0.4",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "keras==3.12.1",
    "kiwisolver==1.5.0",
    "libclang==18.1.1",
    "markdown==3.10.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mediapy==1.2.6",
    "ml-dtypes==0.5.4",
    "moviepy==2.2.1",
    "mpmath==1.3.0",
    "namex==0.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "opt-einsum==3.4.0",
    "optax==0.2.7",
    "optree==0.19.0",
    "parso==0.8.6",
    "pillow==11.3.0",
    "platformdirs==4.9.4",
    "proglog==0.1.12",
    "prompt-toolkit==3.0.52",
    "protobuf==7.34.0",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "rich==14.3.3",
    "scipy==1.15.3",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.13.1",
    "tabulate==0.10.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "tensorflow-probability==0.25.0",
    "termcolor==3.3.0",
    "tf-keras==2.20.1",
    "torch==2.5.1+cu121",
    "torchaudio==2.5.1+cu121",
    "torchvision==0.20.1+cu121",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "wcwidth==0.6.0",
    "werkzeug==3.1.6",
    "wrapt==2.1.2",
]
